Standardizing UI elements

--- a/app/views/schedules/_schedule_entry.html.erb
+++ b/app/views/schedules/_schedule_entry.html.erb
@@ -1,7 +1,9 @@
-<li style="<%= entry.style(@user.nil?) %>" title="<%= lwr(:label_f_hour, entry.hours) %>">
-	<% if @project.nil? %>
-		<%= link_to entry.project, :controller => 'schedules', :action => 'index', :date => day, :project_id => entry.project unless entry.project.nil? %>
-	<% end %>
-	<%= "<br/>" if @project.nil? && @user.nil? %>
-	<%= link_to entry.user, :controller => 'schedules', :action => 'index', :date => day, :user_id => entry.user.id if @user.nil? %>
+<li style="min-height: <%= 3*entry.hours %>em" title="<%= lwr(:label_f_hour, entry.hours) %>">
+	<div style="min-height: <%= 3*entry.hours - 2 %>em; <%= entry.style(@user.nil?) %>">
+		<% if @project.nil? %>
+			<%= link_to entry.project, :controller => 'schedules', :action => 'index', :date => day, :project_id => entry.project unless entry.project.nil? %>
+		<% end %>
+		<%= "<br/>" if @project.nil? && @user.nil? %>
+		<%= link_to entry.user, :controller => 'schedules', :action => 'index', :date => day, :user_id => entry.user.id if @user.nil? %>
+	</div>
 </li>
