--- a/app/views/schedules/_availability_entry.html.erb
+++ b/app/views/schedules/_availability_entry.html.erb
@@ -1,7 +1,9 @@
-<li style="<%= entry.style(@user.nil?, !@viewing_availability) %>" title="<%= lwr(:label_f_hour, entry.hours) %>">
-	<% if !@viewing_availability %>
-		<em><%= link_to "Available", :controller => 'schedules', :action => 'available', :date => day %></em>
-	<% end %>
-	<%= "<br/>" if !@viewing_availability %>
-	<%= link_to entry.user, :controller => 'schedules', :action => 'index', :date => day, :user_id => entry.user.id if @user.nil? %>
+<li style="min-height: <%= 3*entry.hours %>em" title="<%= lwr(:label_f_hour, entry.hours) %>">
+	<div style="min-height: <%= 3*entry.hours - 2 %>em; <%= entry.style(@user.nil?, !@viewing_availability) %>">
+		<% if !@viewing_availability %>
+			<em><%= link_to "Available", :controller => 'schedules', :action => 'available', :date => day %></em>
+		<% end %>
+		<%= "<br/>" if !@viewing_availability %>
+		<%= link_to entry.user, :controller => 'schedules', :action => 'index', :date => day, :user_id => entry.user.id if @user.nil? %>
+	</div>
 </li>
