--- a/app/views/schedules/_user.html.erb
+++ b/app/views/schedules/_user.html.erb
@@ -1,6 +1,6 @@
 <table class="cal schedule_entry-grid">
 	<thead>
-		<tr><td></td><% 7.times do |i| %><th><%= day_name( (calendar.first_wday+i)%7 )%>, <br/><%= month_name((calendar.startdt+i).month) %> <%= (calendar.startdt+i).day %></th><% end %></tr>
+		<tr><td></td><% 7.times do |i| %><th><%= day_name( (calendar.first_wday+i)%7 )%></th><% end %></tr>
 	</thead>
 	<tbody>
 		<% @projects.each do |project| %>
