--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -4,7 +4,14 @@
 	<%= link_to(l(:button_edit), {:controller => 'schedules', :action => 'edit', :date => @date, :user_id => User.current.id}, :class => 'icon icon-edit') unless @project || @user %>
 </div>
 
-<h2>Schedules</h2>
+<h2>
+	<%= l(:label_user_schedule, link_to_user(@user)) unless @user.nil? %>
+	<%= l(:label_project_schedule) unless @project.nil? %>
+	<%= l(:label_availability_schedule) if @viewing_availability %>
+	<%= l(:label_global_schedule) if @user.nil? && @project.nil? && !@viewing_availability %>
+</h2>
+
+<p class="subtitle"><%= "#{l(:label_date_from)} #{format_date(@calendar.startdt)} #{l(:label_date_to).downcase} #{format_date(@calendar.enddt)}" %></p>
 
 <% form_tag({}, :id => 'date_form') do %>
 
@@ -12,12 +19,6 @@
     <%= select_day(@date.day, :prefix => "day", :discard_type => true) %>
     <%= select_month(@date.month, :prefix => "month", :discard_type => true) %>
     <%= select_year(@date.year, :prefix => "year", :discard_type => true) %>
-    <%= link_to_remote l(:button_apply), 
-		{	:update => "content",
-			:with => "Form.serialize('date_form')"
-		}, :class => 'icon icon-checked' %>
-	<%= link_to l(:button_reset), { :project_id => @project.id},  :class => 'icon icon-reload' unless @project.nil? %>
-	<%= link_to l(:button_reset), { :user_id => nil },  :class => 'icon icon-reload' if @project.nil? %>
 </fieldset>
 
 <p style="float:right; margin:0px;">
@@ -25,15 +26,27 @@
 	<%= link_to_remote ('Next week &#187;'), {:update => "content", :url => { :date => @date + 7 }} %>
 </p>
 
+<p class="buttons">
+    <%= link_to_remote l(:button_apply), 
+		{	:update => "content",
+			:with => "Form.serialize('date_form')"
+		}, :class => 'icon icon-checked' %>
+	<%= link_to l(:button_reset), { :project_id => @project.id},  :class => 'icon icon-reload' unless @project.nil? %>
+	<%= link_to l(:button_reset), { :user_id => nil },  :class => 'icon icon-reload' if @project.nil? %>
+</p>
+
 <% end %>
 
 <%= error_messages_for 'query' %>
 
-<h3><%=@date - @date.wday%><%=" for " + @project.to_s unless @project.nil? %><%= " for " + @user.to_s unless @user.nil? %><%= " for availible times" if @viewing_availability %></h3>
 <%= render :partial => 'calendar', :locals => {:calendar => @calendar} %>
 			
 <% html_title(l(:label_calendar)) -%>
 
 <% content_for :header_tags do %>
     <%= stylesheet_link_tag 'schedules', :plugin => 'redmine_schedules' %>
+<% end %>
+
+<% content_for :sidebar do %>
+	<%= render :partial => 'sidebar' %>
 <% end %>
