--- a/app/views/schedules/_availability_entry.html.erb
+++ b/app/views/schedules/_availability_entry.html.erb
@@ -1,4 +1,4 @@
-<li style="min-height: <%= 3.2*entry.hours %>em" title="<%= lwr(:label_f_hour, entry.hours) %>">
+<li style="min-height: <%= 3.2*entry.hours %>em" title="<%= l(:label_f_hour, :value => entry.hours) %>">
 	<div style="min-height: <%= 3.2*entry.hours - 1.9 %>em; <%= entry.style(@user.nil?, !@viewing_availability) %>">
 		<% if !@viewing_availability %>
 			<em><%= link_to "Available", :controller => 'schedules', :action => 'available', :date => day %></em>
