--- a/app/views/schedules/_day.html.erb
+++ b/app/views/schedules/_day.html.erb
@@ -1,4 +1,4 @@
-<table class="cal schedule_entry-grid">
+<table class="cal schedule_entry_grid">
 	<tr>
 		<td></td>
 		<% @projects.each do |project| %>
