--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -3,9 +3,9 @@
 <%= breadcrumb link_to(l(:label_schedules_index), {:controller => 'schedules', :action => 'index', :date => @date }) unless !@project.nil? || !@user.nil? %>
 
 <h2>
-	<%= l(:label_schedule_edit, link_to_user(@user)) unless @user.nil? %>
-	<%= l(:label_schedule_edit, @project) unless @project.nil? %>
-	<%= l(:label_schedule_edit, "today") if @user.nil? && @project.nil? %>
+	<%= l(:label_schedule_edit, :target => link_to_user(@user)) unless @user.nil? %>
+	<%= l(:label_schedule_edit, :target => @project) unless @project.nil? %>
+	<%= l(:label_schedule_edit, :target => "today") if @user.nil? && @project.nil? %>
 </h2>
 
 <p class="subtitle"><%= "#{l(:label_date_from)} #{format_date(@calendar.startdt)} #{l(:label_date_to).downcase} #{format_date(@calendar.enddt)}" %></p>
@@ -42,8 +42,13 @@
 	</div>
 <% end %>
 
+<%= javascript_include_tag 'schedules_edit', :plugin => 'redmine_schedules'  %>
+
 <% content_for :header_tags do %>
     <%= stylesheet_link_tag 'schedules', :plugin => 'redmine_schedules' %>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script type="text/javascript">jQuery.noConflict();</script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.5.3/jquery-ui.min.js"></script>
 <% end %>
 
 
