--- a/app/views/schedules/_project.html.erb
+++ b/app/views/schedules/_project.html.erb
@@ -1,4 +1,4 @@
-<table class="cal schedule_entry-grid">
+<table class="cal schedule_entry_grid">
 	<thead>
 		<tr><td></td><% 7.times do |i| %><th><%= day_name( (calendar.first_wday+i)%7 )%></th><% end %></tr>
 	</thead>
@@ -10,18 +10,21 @@
 			while day <= calendar.enddt %>
 			<td class="even<%= ' today' if Date.today == day %>">
 				<%
-					schedule_entry = ScheduleEntry.find(:first, :conditions => ["project_id=? AND user_id=? AND date=?", @project.id, user.id, day])
-					if (schedule_entry.nil?)
-						schedule_entry = ScheduleEntry.new
-						schedule_entry.project_id = @project.id
-						schedule_entry.user_id = user.id
-						schedule_entry.date = day
+					entry = ScheduleEntry.find(:first, :conditions => ["project_id=? AND user_id=? AND date=?", @project.id, user.id, day])
+					if (entry.nil?)
+						entry = ScheduleEntry.new
+						entry.project_id = @project.id
+						entry.user_id = user.id
+						entry.date = day
+						hours = nil
+					else
+						hours = entry.hours
 					end
 				%>
 				<% if User.current.allowed_to?(:edit_all_schedules, @project) || (User.current == user && User.current.allowed_to?(:edit_own_schedules, @project)) %>
-					<%= text_field "schedule_entry", "hours", "size" => 3, "name" => schedule_entry.form_id, "id" => schedule_entry.form_id, "value" => schedule_entry.hours %>
+					<%= text_field "schedule_entry", "hours", :size => 3, :name => entry.form_id, :id => entry.form_id, :value => hours %>
 				<% else %>
-					<%= %Q{<input type="text" size="3" disabled="disabled" value="#{schedule_entry.hours}" />} %>
+					<%= %Q{<input type="text" size="3" disabled="disabled" value="#{hours}" />} %>
 				<% end %>
 			</td>
 			<% day = day + 1
@@ -29,4 +32,17 @@
 		</tr>
 		<% end %>
 	</tbody>
+	<tfoot>
+		<tr>
+			<th>Totals</th>
+			<% day = calendar.startdt
+			while day <= calendar.enddt %>
+			<th class="even<%= ' today' if Date.today == day %>">
+				<% sum = ScheduleEntry.find(:all, :conditions => ["project_id=? AND date=?", @project.id, day]).collect(&:hours).sum %>
+				<%= sum if sum > 0 %>
+			</th>
+			<% day = day + 1
+			end %>
+		</tr>
+	</tfoot>
 </table>
