--- a/assets/stylesheets/schedules.css
+++ b/assets/stylesheets/schedules.css
@@ -1,8 +1,8 @@
-table.schedule_entry-grid { width: auto; }
-table.schedule_entry-grid tbody tr { height: auto; }
-table.schedule_entry-grid th { padding: 0.4em 0.8em; white-space: nowrap; }
-table.schedule_entry-grid td { text-align: center; vertical-align: middle; }
-table.schedule_entry-grid input { text-align: center; }
-table.schedule_entry-cal ul { list-style-type: none; padding: 0; margin: 0.5em }
-table.schedule_entry-cal li {  }
-table.schedule_entry-cal div { padding: 0.5em; margin-bottom: 0.5em; }
+table.schedule_entry_grid { width: auto; }
+table.schedule_entry_grid tbody tr { height: auto; }
+table.schedule_entry_grid th { padding: 0.4em 0.8em; white-space: nowrap; }
+table.schedule_entry_grid td { text-align: center; vertical-align: middle; }
+table.schedule_entry_grid input { text-align: center; }
+table.schedule_entry_cal ul { list-style-type: none; padding: 0; margin: 0.5em }
+table.schedule_entry_cal li {  }
+table.schedule_entry_cal div { padding: 0.5em; margin-bottom: 0.5em; }
