--- a/app/views/schedules/_day.html.erb
+++ b/app/views/schedules/_day.html.erb
@@ -1,3 +1,8 @@
+<%
+	# This partial might be removed as it's going fairly unused in my
+	# primary test environment. I'm keeping it around for the mean time,
+	# but it probably won't last another version or two.
+%>
 <table class="cal schedule_entry_grid">
 	<tr>
 		<td></td>
