--- a/app/views/schedules/_calendar.html.erb
+++ b/app/views/schedules/_calendar.html.erb
@@ -1,48 +1,50 @@
+<%
+	schedule_entries_by_day = @schedule_entries.group_by {|entry| entry.date}
+	availability_entries_by_day = @availability_entries.group_by {|entry| entry.date}
+%>
 <table class="cal schedule_entry_cal">
 	<thead>
 		<tr>
-			<% day = calendar.startdt %>
-			<% while day <= calendar.enddt %>
+			<% (calendar.startdt..calendar.enddt).each do |day| %>
 				<th><%= day_name(day.wday) %>, <br/><%= month_name(day.month) %> <%= day.day %></th>
-			<% day = day + 1
-			end %>
+			<% end %>
 		</tr>
 	</thead>
 	<tbody>
 		<tr>
-			<% day = calendar.startdt %>
-			<% while day <= calendar.enddt %>
-			<td class="even<%= ' today' if Date.today == day %>">
-				<ul>
-					<% if !@viewing_availability %>
-						<% @schedule_entries.entries_by_day(day).sort.each do |entry| %>
-							<%= render :partial => 'schedule_entry', :locals => {:entry => entry, :day => day} %>
+			<% (calendar.startdt..calendar.enddt).each do |day| %>
+				<td class="even<%= ' today' if Date.today == day %>">
+					<ul>
+						<% if !@viewing_availability %>
+							<% if !schedule_entries_by_day[day].nil? %>
+								<% schedule_entries_by_day[day].sort.each do |entry| %>
+									<%= render :partial => 'schedule_entry', :locals => {:entry => entry, :day => day} %>
+								<% end %>
+							<% end %>
 						<% end %>
-					<% end %>
-					<% @availability_entries.entries_by_day(day).sort.each do |entry| %>
-						<%= render :partial => 'availability_entry', :locals => {:entry => entry, :day => day} %>
-					<% end %>
-				</ul>
-			</td>
-			<% day = day + 1
-			end %>
+						<% if !availability_entries_by_day[day].nil? %>
+							<% availability_entries_by_day[day].sort.each do |entry| %>
+								<%= render :partial => 'availability_entry', :locals => {:entry => entry, :day => day} %>
+							<% end %>
+						<% end %>
+					</ul>
+				</td>
+			<% end %>
 		</tr>
 	</tbody>
 	<tfoot>
 		<tr>
-			<% entries = @viewing_availability ? @availability_entries : @schedule_entries %>
-			<% day = calendar.startdt %>
-			<% while day <= calendar.enddt %>
+			<% entries_by_day = @viewing_availability ? availability_entries_by_day : schedule_entries_by_day %>
+			<% (calendar.startdt..calendar.enddt).each do |day| %>
 				<th>
-					<% sum = entries.entries_by_day(day).collect(&:hours).sum %>
+					<% sum = entries_by_day[day].nil? ? 0 : entries_by_day[day].collect(&:hours).sum %>
 					<%= sum if sum > 0 %>
 					<% if !@viewing_availability %>
-						<% available_sum = @availability_entries.entries_by_day(day).collect(&:hours).sum %>
-						<%= "<em>(+"+available_sum.to_s+")</em>" if available_sum > 0 %>
+						<% available_sum = availability_entries_by_day[day].nil? ? 0 : availability_entries_by_day[day].collect(&:hours).sum %>
+						<%= "<span class='schedule_available'>("+available_sum.to_s+" available)</em>" if available_sum > 0 %>
 					<% end %>
 				</th>
-			<% day = day + 1
-			end %>
+			<% end %>
 		</tr>
 	</tfoot>
 </table>
