--- a/app/views/schedules/_availability_entry.html.erb
+++ b/app/views/schedules/_availability_entry.html.erb
@@ -1,7 +1,7 @@
 <li class="availability_entry" style="min-height: <%= 3.2*entry.hours %>em">
 	<div title="<%= l(:label_f_hour, :value => entry.hours) %>" style="min-height: <%= 3.2*entry.hours - 1.9 %>em; <%= entry.style(@user.nil?, !@viewing_availability) %>">
 		<% if !@viewing_availability %>
-			<em><%= link_to "Available", :controller => 'schedules', :action => 'available', :date => day %></em>
+			<em><%= link_to l(:label_schedules_available), :controller => 'schedules', :action => 'available', :date => day %></em>
 		<% end %>
 		<%= "<br/>" if !@viewing_availability %>
 		<%= link_to entry.user, :controller => 'schedules', :action => 'index', :date => day, :user_id => entry.user.id if @user.nil? %>
