--- a/app/views/schedules/_report_criteria.html.erb
+++ b/app/views/schedules/_report_criteria.html.erb
@@ -16,11 +16,16 @@
 <td><%= h(formatted_criteria_value) %></td>
 <%= '<td></td>' * (criterias.length - level - 1) -%>
   <% total = 0 -%>
+  <% logged_total = 0 -%>
   <% @periods.each do |period| -%>
     <% sum = sum_hours(select_hours(hours_for_value, @columns, period.to_s)); total += sum -%>
+    <% logged_sum = sum_logged_hours(select_hours(hours_for_value, @columns, period.to_s)); logged_total += logged_sum %>
     <td class="hours"><%= html_hours("%.2f" % sum) if sum > 0 %></td>
   <% end -%>
   <td class="hours"><%= html_hours("%.2f" % total) if total > 0 %></td>
+  <td class="hours <%= "underscheduled" if logged_total > total %> ">
+  	<%= progress_bar (logged_total/total <= 1 ? 100*logged_total/total : 100), :width => '80px', :legend => html_hours("%.0f" % logged_total) + "/" + html_hours("%.0f" % total) if total > 0 %>
+  </td>
 </tr>
 <% if criterias.length > level+1 -%>
   <%= render(:partial => 'report_criteria', :locals => {:criterias => criterias, :hours => hours_for_value, :level => (level + 1)}) %>
