--- a/assets/stylesheets/schedules.css
+++ b/assets/stylesheets/schedules.css
@@ -7,3 +7,5 @@ table.schedule_entry_cal ul { list-style-type: none; padding: 0; margin: 0.5em }
 table.schedule_entry_cal li {  }
 table.schedule_entry_cal div { padding: 0.5em; margin-bottom: 0.5em; }
 span.schedule_available { white-space: nowrap; }
+td.hours table.progress { float: right; margin: 1px 0 1px 6px; }
+td.underscheduled table.progress td.closed { background: #e0dbba none repeat scroll 0%; }
