--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -41,7 +41,7 @@
 
 <%= render :partial => 'calendar', :locals => {:calendar => @calendar} %>
 			
-<% html_title(l(:label_schedule_index)) -%>
+<% html_title(l(:label_schedules_index)) -%>
 
 <% content_for :header_tags do %>
     <%= stylesheet_link_tag 'schedules', :plugin => 'redmine_schedules' %>
