--- a/app/views/schedules/report.html.erb
+++ b/app/views/schedules/report.html.erb
@@ -67,13 +67,14 @@
   <% total = 0 -%>
   <% logged_total = 0 -%>
   <% @periods.each do |period| -%>
-    <% sum = sum_hours(select_hours(@hours, @columns, period.to_s)); total += sum -%>
-    <% logged_sum = sum_logged_hours(select_hours(@hours, @columns, period.to_s)); logged_total += logged_sum -%>
+  	<% selected_hours = select_hours(@hours, @columns, period.to_s) %>
+    <% sum = sum_hours(selected_hours); total += sum -%>
+    <% logged_sum = sum_logged_hours(selected_hours); logged_total += logged_sum %>
     <td class="hours"><%= html_hours("%.2f" % sum) if sum > 0 %></td>
   <% end -%>
   <td class="hours"><%= html_hours("%.2f" % total) if total > 0 %></td>
-  <td class="hours">
-  	<%= progress_bar (logged_total/total <= 1 ? 100*logged_total/total : 100), :width => '80px', :legend => html_hours("%.0f" % logged_total) + "/" + html_hours("%.0f" % total) if total > 0 %>
+  <td class="hours <%= "underscheduled" if logged_total > total %> ">
+  	<%= progress_bar (logged_total/total <= 1 ? 100*logged_total/total : 100), :width => '80px', :legend => html_hours("%.02f" % logged_total) %>
   </td>
   </tr>
 </tbody>
