--- a/app/views/versions/show.html.erb
+++ b/app/views/versions/show.html.erb
@@ -1,3 +1,12 @@
+<%
+	# This view is based off of Redmine's roadmap. It has been modified
+	# to accommodate the needs of the Schedules plugin. In the event that
+	# changes are made to the original, this file will need to be updated
+	# accordingly. As such, efforts should be made to modify this file as
+	# little as possible as it's effectively a branch that we want to keep
+	# in sync.
+%>
+
 <div class="contextual">
 <%= link_to_if_authorized l(:button_edit), {:controller => 'versions', :action => 'edit', :id => @version}, :class => 'icon icon-edit' %>
 <% if User.current.allowed_to?(:manage_versions, @project) && @version.project.module_enabled?('schedule_module') && User.current.allowed_to?(:edit_all_schedules, @project) %>
