--- a/app/views/schedules/_schedule_entry.html.erb
+++ b/app/views/schedules/_schedule_entry.html.erb
@@ -1,8 +1,6 @@
-<li class="schedule_entry" style="min-height: <%= 2.2*entry.hours %>em">
-	<div title="<%= l(:label_f_hour, :value => entry.hours) %>" style="min-height: <%= 2.2*entry.hours - 1.9 %>em; <%= entry.style(@user.nil?) %>">
-		<% if @project.nil? %>
-			<%= link_to entry.project, :controller => 'schedules', :action => 'index', :date => day, :project_id => entry.project unless entry.project.nil? %>
-		<% end %>
+<li class="schedule_entry" style="min-height: <%= 2.7*entry.hours %>em">
+	<div title="<%= l(:label_f_hour, :value => entry.hours) %>" style="min-height: <%= 2.7*entry.hours - 1.7 %>em; <%= entry_style(@user.nil? ? entry.user.id : entry.project.id) %>">
+		<%= link_to entry.project, :controller => 'schedules', :action => 'index', :date => day, :project_id => entry.project if @project.nil?%>
 		<%= "<br/>" if @project.nil? && @user.nil? %>
 		<%= link_to entry.user, :controller => 'schedules', :action => 'index', :date => day, :user_id => entry.user.id if @user.nil? %>
 	</div>
