--- a/app/views/schedules/_sidebar.html.erb
+++ b/app/views/schedules/_sidebar.html.erb
@@ -1,14 +1,14 @@
 <h3><%= l(:label_schedules_index) %></h3>
-<%= link_to l(:label_report), :controller => 'schedules', :action => 'report' %>
+<%= link_to l(:label_report), :controller => 'schedules', :action => 'report' %><br/>
 
-<% if @project.nil? %>
+<% if !@projects.nil? && @project.nil? %>
 	<h3><%= l(:label_schedules_projects) %></h3>
 	<% @projects.each do |project| %>
 		<%= link_to project, :controller => 'schedules', :action => 'index', :project_id => project %>
 		<br/>
 	<% end %>
 <% end %>
-<% if @user.nil? %>
+<% if !@users.nil? && @user.nil? %>
 	<h3><%= l(:label_schedules_users) %></h3>
 	<% @users.each do |user| %>
 		<%= link_to user, :controller => 'schedules', :action => 'index', :user_id => user.id %>
