--- a/assets/stylesheets/schedules.css
+++ b/assets/stylesheets/schedules.css
@@ -3,7 +3,8 @@ table.schedule_entry_grid tbody tr { height: auto; }
 table.schedule_entry_grid th { padding: 0.4em 0.8em; white-space: nowrap; }
 table.schedule_entry_grid td { text-align: center; vertical-align: middle; }
 table.schedule_entry_grid input { text-align: center; }
-table.schedule_entry_cal ul { list-style-type: none; padding: 0; margin: 0.5em }
+table.schedule_entry_cal td { padding: 0; }
+table.schedule_entry_cal ul { list-style-type: none; padding: 0; margin: 0.5em 0.5em 0; }
 table.schedule_entry_cal li {  }
 table.schedule_entry_cal div { padding: 0.5em; margin-bottom: 0.5em; line-height: 1em; }
 span.schedule_available { white-space: nowrap; }
